compiler/tests/liva/errors/e0603_not_awaitable.liva
// Error Test: E0603 — Await on non-awaitable expression
// EXPECT: E0603
main() {
    let x = await 42
}
